Fix figure caption spacing

--- a/src/assets/sass/global.sass
+++ b/src/assets/sass/global.sass
@@ -180,8 +180,6 @@ a
     margin-left: 2em
 
   figure
-    margin-left: 2em
-    margin-right: 2em
     text-align: center
 
     &:not(:first-child)
@@ -192,9 +190,10 @@ a
 
     img
       display: inline-block
+      margin-bottom: 0 !important
 
     figcaption
-      margin-top: -1em
+      font-size: 80%
       font-style: italic
 
       span
